<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/specialUnitChildrenConstraintLay"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/specialUnitForChildren"
        style="@style/textTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Special unit for children with special needs"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/specializedEquipmentLay"
        style="@style/questionBackCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_back_card"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/specialUnitForChildren">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Specialised equipments and materials like psychological test material , training materials for speech and language , teaching materials , wheelchairs, creches etc." />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:hint="Remarks" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/specializedMedicalAssistanceLay"
        style="@style/questionBackCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_back_card"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/specializedEquipmentLay">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Specialised medical assistance for antiretroviral therapy ( ART), detoxification and traetment" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:hint="Remarks" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/specializedMedicalAssistanceLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/specialUnitChildrenBack"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/specialUnitChildrenNext"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>