<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/educationConstraint"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/educationTextView"
        style="@style/textTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Education"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/goingToSchoolOutLay"
        style="@style/questionBackCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_back_card"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/educationTextView">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Whether children are going to school outside campus" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:hint="Remarks" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/insideSchoolLay"
        style="@style/questionBackCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_back_card"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/goingToSchoolOutLay">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schooling inside institution campus" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:hint="Remarks" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tuitionsLay"
        style="@style/questionBackCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_back_card"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/insideSchoolLay">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuitions" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:hint="Remarks" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otherEducation"
        style="@style/questionBackCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/question_back_card"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tuitionsLay">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other Education" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:hint="Remarks" />
    </LinearLayout>

    <LinearLayout
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/otherEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/educationBack"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/educationNext"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>